--- a/index.html
+++ b/index.html
@@ -6,42 +6,269 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Ecommerce</title>
+    <!-- Font awesome kit  -->
+    <script src="https://kit.fontawesome.com/d09449a7ab.js" crossorigin="anonymous"></script>
     <!-- Bootstrap cdn  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- Stylesheet Link  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <!-- Navbar part Start  -->
 
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="images/logo.png" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-lg bg-light p-2">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Backpack</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Subscribe</a>
+                    </li>
+                </ul>
             </div>
+
         </nav>
         <!-- Navbar part End  -->
+        <!-- Slider part start  -->
+        <section class="slider my-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active rounded" style="background-color: #FCEAE8;">
+
+                        <div class="row p-5">
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div>
+                                    <h1>Cool Dude Headphone</h1>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of
+                                        funky world</p>
+                                    <h3 class="h2 text-danger">
+                                        $420
+                                    </h3>
+                                    <a href="#" class="btn btn-success">Buy Now</a>
+                                </div>
+
+                            </div>
+                            <div class="col-md-4 col-12">
+                                <img src="images/banner-images/headphone.png" class="img-fluid" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item rounded" style="background-color: #FCEAE8;">
+
+                        <div class="row p-5">
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div>
+                                    <h1>X-box for your living room</h1>
+                                    <p>This is the best x-box in the world for people who just want to waste time in
+                                        front of
+                                        fake sports</p>
+                                    <h3 class="h2 text-danger">
+                                        $600
+                                    </h3>
+                                    <a href="#" class="btn btn-success">Buy Now</a>
+                                </div>
+
+                            </div>
+                            <div class="col-md-4 col-12">
+                                <img src="images/banner-images/xbox.png" class="img-fluid" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item rounded" style="background-color: #FCEAE8;">
+
+                        <div class="row p-5">
+                            <div class="col-md-8 d-flex align-items-center">
+                                <div>
+                                    <h1>Mega Lcd Tv For Sports</h1>
+                                    <p>This is the best headphone in the world who just want to waste time in front of
+                                        tv</p>
+                                    <h3 class="h2 text-danger">
+                                        $1200
+                                    </h3>
+                                    <a href="#" class="btn btn-success">Buy Now</a>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-12">
+                                <img src="images/banner-images/tv.png" class="img-fluid" alt="">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- Slider part end  -->
+        <main class="container">
+            <!-- Catagory Part Start  -->
+
+            <section class="catagory my-5">
+                <div class="row g-3">
+                    <div class="col-lg-4 col-md-6 col-12 rounded text-white">
+                        <div class="d-flex justify-content-between align-items-center bg-info p-3">
+                            <h1>Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 rounded text-white">
+                        <div class="d-flex justify-content-between align-items-center bg-success  p-3">
+                            <h1>Bags</h1>
+                            <img src="images/categories/bag.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 rounded  text-white">
+                        <div class="d-flex justify-content-between align-items-center bg-warning  p-3">
+                            <h1>Watch</h1>
+                            <img src="images/categories/watch.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Catagory Part End  -->
+            <!-- Shoes Part Start  -->
+            <section class="shoes my-5">
+                <h1>Shoes</h1>
+                <div class="row g-3">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0 rounded shadow-lg">
+                            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Supply 350</h3>
+                                <p class="card-text">This is a longer card with supporting text below as a natural
+                                    lead-in to additional.</p>
+                                <h4>$120</h4>
+
+                                <div class="mt-5">
+                                    <a href="#" class="btn btn-primary">Buy Now <i
+                                            class="fa-solid fa-arrow-right ms-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0 rounded shadow-lg">
+                            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Nike 360</h3>
+                                <p class="card-text">This card has supporting text below as a natural lead-in to
+                                    additional</p>
+                                <h4>$320</h4>
+
+                                <div class="mt-5">
+                                    <a href="#" class="btn btn-primary">Buy Now <i
+                                            class="fa-solid fa-arrow-right ms-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0 rounded shadow-lg">
+                            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Red Airmax</h3>
+                                <p class="card-text">This is a longer card with supporting text below as a natural
+                                    lead-in to additional.</p>
+                                <h4>$350</h4>
+
+                                <div class="mt-5">
+                                    <a href="#" class="btn btn-primary">Buy Now <i
+                                            class="fa-solid fa-arrow-right ms-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
+            <!-- Shoes Part End  -->
+            <!-- Backpapck Part Start  -->
+            <section class="backpack my-5">
+                <h1>Backpack</h1>
+                <div class="row g-3">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0 rounded shadow-lg">
+                            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Red Laltu Bag</h3>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <h4>$120</h4>
+
+                                <div class="mt-5">
+                                    <a href="#" class="btn btn-success">Buy Now <i
+                                            class="fa-solid fa-arrow-right ms-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0 rounded shadow-lg">
+                            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Blue Niltu Bag</h3>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <h4>$320</h4>
+
+                                <div class="mt-5">
+                                    <a href="#" class="btn btn-success">Buy Now <i
+                                            class="fa-solid fa-arrow-right ms-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0 rounded shadow-lg">
+                            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Black Kaltu Bag
+                                </h3>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <h4>$169</h4>
+
+                                <div class="mt-5">
+                                    <a href="#" class="btn btn-success">Buy Now <i
+                                            class="fa-solid fa-arrow-right ms-2"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+            <!-- Backpapck Part End  -->
+        </main>
     </header>
 
 
