--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container">
         <!-- Navbar part Start  -->
 
-        <nav class="navbar navbar-expand-lg bg-light p-2">
+        <nav class="navbar navbar-expand-lg bg-light p-2 fixed-top container">
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
             </a>
@@ -32,13 +32,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shoes</a>
+                        <a class="nav-link" href="#shoes">Shoes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Backpack</a>
+                        <a class="nav-link" href="#backpack">Backpack</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Subscribe</a>
+                        <a class="nav-link" href="#subscribe">Subscribe</a>
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
         <section class="slider my-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active rounded" style="background-color: #FCEAE8;">
+                    <div class="carousel-item active rounded slider-bg">
 
                         <div class="row p-5">
                             <div class="col-md-8 d-flex align-items-center">
@@ -61,7 +61,7 @@
                                     <h3 class="h2 text-danger">
                                         $420
                                     </h3>
-                                    <a href="#" class="btn btn-success">Buy Now</a>
+                                    <a href="#" class="btn link-btn">Buy Now</a>
                                 </div>
 
                             </div>
@@ -71,7 +71,7 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item rounded" style="background-color: #FCEAE8;">
+                    <div class="carousel-item rounded slider-bg">
 
                         <div class="row p-5">
                             <div class="col-md-8 d-flex align-items-center">
@@ -83,7 +83,7 @@
                                     <h3 class="h2 text-danger">
                                         $600
                                     </h3>
-                                    <a href="#" class="btn btn-success">Buy Now</a>
+                                    <a href="#" class="btn link-btn">Buy Now</a>
                                 </div>
 
                             </div>
@@ -93,7 +93,7 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item rounded" style="background-color: #FCEAE8;">
+                    <div class="carousel-item rounded slider-bg">
 
                         <div class="row p-5">
                             <div class="col-md-8 d-flex align-items-center">
@@ -104,7 +104,7 @@
                                     <h3 class="h2 text-danger">
                                         $1200
                                     </h3>
-                                    <a href="#" class="btn btn-success">Buy Now</a>
+                                    <a href="#" class="btn link-btn">Buy Now</a>
                                 </div>
                             </div>
                             <div class="col-md-4 col-12">
@@ -127,160 +127,167 @@
             </div>
         </section>
         <!-- Slider part end  -->
-        <main class="container">
-            <!-- Catagory Part Start  -->
-
-            <section class="catagory my-5">
-                <div class="row g-3">
-                    <div class="col-lg-4 col-md-6 col-12 rounded text-white">
-                        <div class="d-flex justify-content-between align-items-center bg-info p-3">
-                            <h1>Shoes</h1>
-                            <img src="images/categories/shoes.png" alt="" class="img-fluid">
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12 rounded text-white">
-                        <div class="d-flex justify-content-between align-items-center bg-success  p-3">
-                            <h1>Bags</h1>
-                            <img src="images/categories/bag.png" alt="" class="img-fluid">
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12 rounded  text-white">
-                        <div class="d-flex justify-content-between align-items-center bg-warning  p-3">
-                            <h1>Watch</h1>
-                            <img src="images/categories/watch.png" alt="" class="img-fluid">
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Catagory Part End  -->
-            <!-- Shoes Part Start  -->
-            <section class="shoes my-5">
-                <h1>Shoes</h1>
-                <div class="row g-3">
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0 rounded shadow-lg">
-                            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title">Supply 350</h3>
-                                <p class="card-text">This is a longer card with supporting text below as a natural
-                                    lead-in to additional.</p>
-                                <h4>$120</h4>
-
-                                <div class="mt-5">
-                                    <a href="#" class="btn btn-primary">Buy Now <i
-                                            class="fa-solid fa-arrow-right ms-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0 rounded shadow-lg">
-                            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title">Nike 360</h3>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to
-                                    additional</p>
-                                <h4>$320</h4>
-
-                                <div class="mt-5">
-                                    <a href="#" class="btn btn-primary">Buy Now <i
-                                            class="fa-solid fa-arrow-right ms-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0 rounded shadow-lg">
-                            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title">Red Airmax</h3>
-                                <p class="card-text">This is a longer card with supporting text below as a natural
-                                    lead-in to additional.</p>
-                                <h4>$350</h4>
-
-                                <div class="mt-5">
-                                    <a href="#" class="btn btn-primary">Buy Now <i
-                                            class="fa-solid fa-arrow-right ms-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </section>
-
-            <!-- Shoes Part End  -->
-            <!-- Backpapck Part Start  -->
-            <section class="backpack my-5">
-                <h1>Backpack</h1>
-                <div class="row g-3">
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0 rounded shadow-lg">
-                            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title">Red Laltu Bag</h3>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <h4>$120</h4>
-
-                                <div class="mt-5">
-                                    <a href="#" class="btn btn-success">Buy Now <i
-                                            class="fa-solid fa-arrow-right ms-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0 rounded shadow-lg">
-                            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title">Blue Niltu Bag</h3>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <h4>$320</h4>
-
-                                <div class="mt-5">
-                                    <a href="#" class="btn btn-success">Buy Now <i
-                                            class="fa-solid fa-arrow-right ms-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0 rounded shadow-lg">
-                            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h3 class="card-title">Black Kaltu Bag
-                                </h3>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <h4>$169</h4>
-
-                                <div class="mt-5">
-                                    <a href="#" class="btn btn-success">Buy Now <i
-                                            class="fa-solid fa-arrow-right ms-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </section>
-            <!-- Backpapck Part End  -->
-        </main>
     </header>
+    <main class="container">
+        <!-- Catagory Part Start  -->
 
+        <section id="catagory" class="my-5">
+            <div class="row g-3">
+                <div class="col-lg-4 col-md-6 col-12 rounded text-white">
+                    <div class="d-flex justify-content-between align-items-center bg-info p-3">
+                        <h1>Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 rounded text-white">
+                    <div class="d-flex justify-content-between align-items-center bg-success  p-3">
+                        <h1>Bags</h1>
+                        <img src="images/categories/bag.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 rounded  text-white">
+                    <div class="d-flex justify-content-between align-items-center bg-warning  p-3">
+                        <h1>Watch</h1>
+                        <img src="images/categories/watch.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Catagory Part End  -->
+        <!-- Shoes Part Start  -->
+        <section id="shoes" class="my-5">
+            <h1>Shoes</h1>
+            <div class="row g-3">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0 rounded shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Supply 350</h3>
+                            <p class="card-text">This is a longer card with supporting text below as a natural
+                                lead-in to additional.</p>
+                            <h4>$120</h4>
 
+                            <div class="mt-5">
+                                <a href="#" class="btn link-btn">Buy Now <i
+                                        class="fa-solid fa-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0 rounded shadow-lg">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Nike 360</h3>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to
+                                additional</p>
+                            <h4>$320</h4>
 
+                            <div class="mt-5">
+                                <a href="#" class="btn link-btn">Buy Now <i
+                                        class="fa-solid fa-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0 rounded shadow-lg">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Red Airmax</h3>
+                            <p class="card-text">This is a longer card with supporting text below as a natural
+                                lead-in to additional.</p>
+                            <h4>$350</h4>
 
+                            <div class="mt-5">
+                                <a href="#" class="btn link-btn">Buy Now <i
+                                        class="fa-solid fa-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </section>
 
+        <!-- Shoes Part End  -->
+        <!-- Backpapck Part Start  -->
+        <section id="backpack" class="my-5">
+            <h1>Backpack</h1>
+            <div class="row g-3">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0 rounded shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Red Laltu Bag</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <h4>$120</h4>
 
+                            <div class="mt-5">
+                                <a href="#" class="btn link-btn">Buy Now <i
+                                        class="fa-solid fa-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0 rounded shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Blue Niltu Bag</h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <h4>$320</h4>
 
+                            <div class="mt-5">
+                                <a href="#" class="btn link-btn">Buy Now <i
+                                        class="fa-solid fa-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0 rounded shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Black Kaltu Bag
+                            </h3>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                                lead-in to additional content. This content is a little bit longer.</p>
+                            <h4>$169</h4>
 
+                            <div class="mt-5">
+                                <a href="#" class="btn link-btn">Buy Now <i
+                                        class="fa-solid fa-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </section>
+        <!-- Backpapck Part End  -->
+        <!-- Subscribe Star  -->
+        <section style="background-color: #FCEAE8;" id="subscribe"
+            class="p-5 d-flex justify-content-center align-items-center">
+            <div class="form-content text-success text-center">
+                <h3 class="text-uppercase">Lets Stay in touch</h3>
+                <p>Get Updates Special And More</p>
+                <form>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <button type="submit" class="btn link-btn">Subscribe</button>
+                </form>
+            </div>
+
+        </section>
+        <!-- Subscribe End  -->
+
+    </main>
+    <footer class="container text-center my-5">
+        <p>©2022. Panda Commerce. All rights reserved. Rakib, Bangladesh.</p>
+    </footer>
 
     <!-- Bootstrap Js Cdn  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
